--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,8 @@ dist.jar=${dist.dir}/GUIPractice.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcommon-1.0.23.jar=E:\\Program Files (x86)\\NetBeans 8.2\\Library\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=E:\\Program Files (x86)\\NetBeans 8.2\\Library\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
 file.reference.mysql-connector-java-8.0.13.jar=E:\\MySQL_Reference\\mysql-connector-java-8.0.13\\mysql-connector-java-8.0.13.jar
 file.reference.swingx-all-1.6.4.jar=E:\\Program Files (x86)\\NetBeans 8.2\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 includes=**
@@ -36,7 +38,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.13.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.swingx-all-1.6.4.jar}
+    ${file.reference.swingx-all-1.6.4.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
