+ Add JOptionPane when a warning msg

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ endorsed.classpath=
 excludes=
 file.reference.swingx-all-1.6.4.jar=E:\\Program Files (x86)\\NetBeans 8.2\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.NetbeanAssignment.classpath}:\
